# Disaster-Logistics-Optimization

./: .gitignore  README.md
disaster-backend/: README.md  main.py
disaster-backend/app/: models.py  routes.py
disaster-backend/app/services/: data_store.py  route_service.py
disaster-backend/app/utils/: optimizer_bridge.py
disaster-backend/cpp/: CMakeLists.txt  optimizer.cpp
disaster-backend/data/: store.json
frontend-improved/: index.html  package-lock.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend-improved/src/: App.tsx  index.css  main.tsx
frontend-improved/src/components/: AppHeader.tsx  CitySearch.tsx  LeafletMap.tsx
frontend-improved/src/contexts/: AppContext.tsx
frontend-improved/src/hooks/: useBackendSync.ts  useLocalStorageSync.ts
frontend-improved/src/lib/: api.ts
frontend-improved/src/pages/: DashboardTab.tsx  DisasterManagementTab.tsx  DispatchTab.tsx  HistoryLogsTab.tsx  Index.tsx  LandingPagePremium.tsx  ResponseLogisticsTab.tsx  RouteOperationsTab.tsx  WarehousesTab.tsx
